src-tauri/errors_v6.txt
    Checking wisprflow-clone v0.1.0 (C:\Users\Harsh\Desktop\wisprflow-clone\wisprflow-clone\src-tauri)
warning: unused import: `Runtime`
 --> src\lib.rs:5:14
  |
5 |     Manager, Runtime,
  |              ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Code` and `Modifiers`
 --> src\lib.rs:7:36
  |
7 | use tauri_plugin_global_shortcut::{Code, GlobalShortcutExt, Modifiers, Shortcut, ShortcutState};
  |                                    ^^^^                     ^^^^^^^^^

error[E0599]: no method named `get_webview_window` found for reference `&TrayIcon<_>` in the current scope
  --> src\lib.rs:55:51
   |
55 |                         if let Some(window) = app.get_webview_window("main") {
   |                                                   ^^^^^^^^^^^^^^^^^^ method not found in `&TrayIcon<_>`

error[E0282]: type annotations needed
  --> src\lib.rs:56:37
   |
56 | ...                   let _ = window.show();
   |                               ^^^^^^ cannot infer type

error[E0599]: no method named `emit` found for reference `&AppHandle` in the current scope
   --> src\lib.rs:68:33
    |
 68 |                     let _ = app.emit("shortcut-triggered", ());
    |                                 ^^^^
    |
    = help: items from traits can only be used if the trait is in scope
help: there is a method `exit` with a similar name, but with different arguments
   --> C:\Users\Harsh\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.9.5\src\app.rs:534:3
    |
534 |   pub fn exit(&self, exit_code: i32) {
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: trait `Emitter` which provides `emit` is implemented but not in scope; perhaps you want to import it
    |
  1 + use tauri::Emitter;
    |

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `wisprflow-clone` (lib) generated 2 warnings
error: could not compile `wisprflow-clone` (lib) due to 3 previous errors; 2 warnings emitted
